# LLM-Lasso

./: .gitignore  .gitmodules  LICENSE  README.md  constants.py  pyproject.toml  sample_constants.py
examples/: llm_lasso_tutorial.ipynb  omim_rag_tutorial.ipynb
examples/example_data/: example_genenames.txt  user_prompt.txt
omim_scrape/: parse_omim.py  process_mim_number.py
playground/: ablation.ipynb  interactive_mini_rag.py  interactive_omim_RAG.py  omim_recall.ipynb  prez.txt
prompts/: etp_prompt.txt  glioma_large_prompt.txt  lung_TCGA_prompt.txt  lung_prompt.txt  recall_at_k.txt  retrieval_prompt.txt  summarization_prompt.txt
prompts/ash/: adversarial_prompt.txt  bayesian_prompt.txt  gpt_gen_all.txt  gpt_gen_openrouter.txt  gpt_gen_prompt.txt  nsagan_prompt.txt  nsagan_prompt_2.txt  relu_form_prompt.txt
prompts/llm-select/: ash_prompt.txt  bank_prompt.txt  diabetes_prompt.txt  glioma_prompt.txt  spotify_prompt.txt  wine_prompt.txt
prompts/lmpriors/: bank_feature_description.json  bank_prompt.txt  diabetes_feature_description.json  diabetes_prompt.txt  glioma_feature_description.json  glioma_prompt.txt  spotify_feature_description.json  spotify_prompt.txt  wine_feature_description.json  wine_prompt.txt
prompts/small_scale_prompts/: bank_prompt.txt  diabetes_prompt.txt  glioma_prompt.txt  spotify_prompt.txt  wine_prompt.txt
scripts/: adversarial_feature_names.py  argparse_helpers.py  llm_lasso_scores.py  llm_score.py  lmpriors.py  omim_recall.py  pubmed_retrieve.py  run_baselines.py  small_scale_splits.py
src/llm_lasso/: data_splits.py
(+25 files in other folders)
