[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_lasso"
version = "0.0.1"
description = "LLM-Regularized LASSO"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "packaging==24.0",
    "numpy==1.26.4",
    "ucimlrepo==0.0.7",
    "pandas==2.2.3",
    "kagglehub==0.3.8",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-core==0.3.31",
    "langchain-openai==0.3.1",
    "langchain-text-splitters==0.3.5",
    "regex==2024.11.6",
    "seaborn==0.13.2",
    "matplotlib==3.9.4",
    "tqdm==4.67.1",
    "pydantic==2.10.5",
    "openai==1.60.0",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "transformers==4.49.0",
    "xmltodict==0.14.2",
]

[tool.setuptools.packages.find]
where = ["src"]